--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -7,6 +7,9 @@
     border: none;
 }
 label{
-    border: 1px solid black;
-       
+    border: 1px double black;
+    background-color: beige;       
+}
+body{
+    background-color: aqua;
 }
